--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <p class="intro-photo__role">основатель бренда</p>
                             <p class="intro-photo__brand">ETERNAL WAY</p>
                             <p class="intro-photo__conjunction">и магазина</p>
-                            <p class="intro-photo__store">ВСЕ ПУТЕМ</p>
+                            <p class="intro-photo__store">ВСЁ ПУТЁМ</p>
                         </div>
                         <div class="intro-description">
                             <h1 class="intro-description__title">ВСЕМ ПРИВЕТ</h1>
@@ -72,8 +72,26 @@
                     <div class="carousel__container">
                         <ul class="carousel__slider">
                             <li class="carousel__slide">
+                                <a class="carousel__link" target="_blank" href="https://www.wildberries.ru/catalog/259579007/detail.aspx?targetUrl=MS&size=403621867">
+                                    <img class="carousel__image" src="/images/pzu_6v1_wb.png" alt="Пуско-зарядное устройство">
+                                    <p class="carousel__description">Пуско-зарядное устройство</p>
+                                </a>
+                            </li>
+                            <li class="carousel__slide">
+                                <a class="carousel__link" target="_blank" href="https://www.wildberries.ru/catalog/279119313/detail.aspx?targetUrl=BP&size=429060942">
+                                    <img class="carousel__image" src="/images/vozduhoduvka_big_wb.png" alt="Воздуходувка аккумуляторная">
+                                    <p class="carousel__description">Воздуходувка аккумуляторная</p>
+                                </a>
+                            </li>
+                            <li class="carousel__slide">
+                                <a class="carousel__link" target="_blank" href="https://www.wildberries.ru/catalog/174831779/detail.aspx?targetUrl=BP&size=289816351">
+                                    <img class="carousel__image" src="/images/viruchai_doska_wb.png" alt="Выручай доска">
+                                    <p class="carousel__description">Разделочная доска "Выручай доска"</p>
+                                </a>
+                            </li>
+                            <li class="carousel__slide">
                                 <a class="carousel__link" target="_blank" href="https://www.wildberries.ru/catalog/239235402/detail.aspx">
-                                    <img class="carousel__image" src="/images/moika-90-1200.png" alt="Мойка">
+                                    <img class="carousel__image" src="/images/moika-900-1200.png" alt="Мойка">
                                     <p class="carousel__description">Автомойка электрическая аккумуляторная</p>
                                 </a>
                             </li>
@@ -174,33 +192,48 @@
                     <section class="videos__wrapper">
                         <div class="videos__yt">
                             <div class="videos__yt-item">
+                                <a href="https://vk.com/vseputemnamp?z=clip-222213366_456239304" target="_blank">
+                                    <img src="images/covers/video-222213366_456239304_cover.jpg" alt="Video 9">
+                                </a>
+                            </div>
+                            <div class="videos__yt-item">
+                                <a href="https://vk.com/vseputemnamp?z=clip-222213366_456239312" target="_blank">
+                                    <img src="images/covers/video-222213366_456239312_cover.jpg" alt="Video 8">
+                                </a>
+                            </div>
+                            <div class="videos__yt-item">
+                                <a href="https://vk.com/vseputemnamp?z=clip-222213366_456239308" target="_blank">
+                                    <img src="images/covers/video-222213366_456239308_cover.jpg" alt="Video 7">
+                                </a>
+                            </div>
+                            <div class="videos__yt-item">
                                 <a href="https://www.youtube.com/watch?v=WTl_77gEgb4" target="_blank">
-                                    <img src="https://img.youtube.com/vi/WTl_77gEgb4/hqdefault.jpg" alt="Video 1">
+                                    <img src="https://img.youtube.com/vi/WTl_77gEgb4/hqdefault.jpg" alt="Video 6">
                                 </a>
                             </div>
                             <div class="videos__yt-item">
                                 <a href="https://youtu.be/67Egsjq5k9M?si=-Nb07RfAkhxt57_H" target="_blank">
-                                    <img src="https://img.youtube.com/vi/67Egsjq5k9M/hqdefault.jpg" alt="Video 2">
+                                    <img src="https://img.youtube.com/vi/67Egsjq5k9M/hqdefault.jpg" alt="Video 5">
                                 </a>
                             </div>
                             <div class="videos__yt-item">
                                 <a href="https://youtu.be/2PEVOnu6BJw?si=rpMHSO1OSqqdJd7a" target="_blank">
-                                    <img src="https://img.youtube.com/vi/2PEVOnu6BJw/hqdefault.jpg" alt="Video 3">
+                                    <img src="https://img.youtube.com/vi/2PEVOnu6BJw/hqdefault.jpg" alt="Video 4">
                                 </a>
                             </div>
                             <div class="videos__yt-item">
                                 <a href="https://www.youtube.com/shorts/Xm-hJiMjijo" target="_blank">
-                                    <img src="https://img.youtube.com/vi/Xm-hJiMjijo/hqdefault.jpg" alt="Video 4">
+                                    <img src="https://img.youtube.com/vi/Xm-hJiMjijo/hqdefault.jpg" alt="Video 3">
                                 </a>
                             </div>
                             <div class="videos__yt-item">
                                 <a href="https://youtu.be/rMdLWJbP2TY?si=2lKVyBcXmiOXgJGE" target="_blank">
-                                    <img src="https://img.youtube.com/vi/rMdLWJbP2TY/hqdefault.jpg" alt="Video 5">
+                                    <img src="https://img.youtube.com/vi/rMdLWJbP2TY/hqdefault.jpg" alt="Video 2">
                                 </a>
                             </div>
                             <div class="videos__yt-item">
                                 <a href="https://www.youtube.com/shorts/O4t4jfvc1ic" target="_blank">
-                                    <img src="https://img.youtube.com/vi/O4t4jfvc1ic/hqdefault.jpg" alt="Video 6">
+                                    <img src="https://img.youtube.com/vi/O4t4jfvc1ic/hqdefault.jpg" alt="Video 1">
                                 </a>
                             </div>
                         </div>
